Add CRUD example

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/yesiddn/ts-app#readme",
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
